Description of task 1 of the Portfolio

--- a/1.Semester/eCollaboration/Potrfolio.tex
+++ b/1.Semester/eCollaboration/Potrfolio.tex
@@ -28,6 +28,13 @@
 \tableofcontents
 \pagebreak
 \section{Aufgabe Pairprogramming}
+Mit wem habe ich an welchem Projekt und wie gearbeitet?
+\subsection{Zeitaufwand}
+Habe ich dazu mehr oder weniger Zeit benötigt, als hätte ich dies alleine gemacht?
+\subsection{Verwendung in der Zukunft}
+Werde ich diese Methode in der Zukunft verwenden?
+\subsection{Reposetory mit Ergebnis}
+Den Link zum MCI-Repo einfügen und eventuell auch gleich den python Code einfügen
 
 
 \end{document}
