Discusted the awnsers to the exercise with my group members

--- a/1.Semester/Systemplanung/Aufgabe2.tex
+++ b/1.Semester/Systemplanung/Aufgabe2.tex
@@ -33,38 +33,43 @@ Systemanforderungen sind Vorgaben, an welche man sich halten muss, damit dass Pr
 ziehungen zwischen den Ergebnissen dieser Aktivitäten auf.}
 \begin{itemize}
  \item Spezifikation\\
- Hier werden die Anforderungen des Kunden erhoben und Dokumentiert (Requirement Engeneering). Zum Abschluss dieser Phase wird meist ein Pflichtenheft verfasst
+ Hier werden die Anforderungen des Kunden erhoben und Dokumentiert (Requirement Engeneering). Zum Abschluss dieser Phase wird meist ein Pflichtenheft verfasst. Dies kann durch eine Marktanalyse unterstützt werden.
  \item Design und Implementierung\\
- Hier wird zunächst die Architektur des Systems festgelegt meist mit UML oder schon direkte Klassen in der Programmierung angelegt. Danach werden diese Strukturen implementiert. Zum Abschluss dieser Phase wird eine werden UNIT Tests geschrieben, welche sicherstellen, dass das Programm läuft.
+ In dieser Phase fließen die Punkte, welche im Pflichtenheft festgelegt wurden in die Erstellung der Architektur des Systems ein. Für die Darstellung der Arkchitektur verwendet man meist Modellierungssprachen wie UML. Danach werden diese Strukturen implementiert. Zum Abschluss dieser Phase werden UNIT Tests geschrieben, welche für automatisierte Tests verwendet werden.
  \item Validierung\\
- Hier wird überprüft ob die Punkte welche in der Spezifikation erhoben wurden erfüllt worden sind. Ab ende dieser Phase findet eine Abnahme des Kunden statt.
+ Das Programm welches unter der vorherigen Phase entstanden ist, wird nun mit Spezifikation abgeglichen. Des Weiteren werden in dieser Phase noch System- und Entwicklungstest durchgeführt. Am Ende dieser Phase findet eine Abnahme des Kunden statt. Vor der Abnahme werden auch noch Tests von Seiten des Kunden ausgeführt.
  \item Evolution\\
- Diese Phase wird immer irrelevanter, da die Softwareentwicklung ein kontinuierlicher Prozess geworden ist und man davon weg geht, dass es ein Produkt A gibt und einige Jahre später ein Produkt B.
+ Nach heutigem Stand bekommt eine Software schneller Updates und es findet somit eine kontinuierlich weiterentwickelt statt. Durch diese Wartung führt man die Evolution des Produktes automatisch mit. Dadurch kann man sagen, dass diese Phase immer irrelevanter wird, da sie im Zuge des Supports integriert wird.
 \end{itemize}
 \pagebreak
 \section{Erklären Sie warum Änderungen in komplexen Systemen unvermeidlich sind und nennen Sie Beispiele
 von Softwareprozessaktivitäten, die helfen Änderungen vorherzusagen und die die zu entwickelnde Soft-
 ware robuster gegenüber Änderungen machen}
-Komplexe Systeme werden oft über mehrere Jahre entwickelt. Dabei wird meist nach einem Wasserfallmodell gearbeitet, was bedeutet, dass die Anforderungen erhoben werden und dann abgearbeitet werden. Die Anforderungen der Kunden können sich aber während dieser Zeit ändern oder auch die technischen Möglichkeiten. Des weiteren kann es sein, dass man auf eine Technologie setzt und diese dann EOL erreicht (ZcCLient IE11). Hier kann eine Risikoabschätzung im Vorhinein gemacht werden, in welcher man die Technologie Prüft und versucht eine Prognose zu erstellen. Des weiteren kann ein Prototyp entwickelt werden, damit man die technischen Hürden abklären und testen kann. Für sie Änderungen der Kundenanforderungen kann man sich diesen in den Entwicklungsprozess mit ein beziehen, dies ist aber ehre in einem agilen Softwareprozess der Fall und nicht in einem Plan-getriebenen.
+Am Anfang eines Projektes kann man nicht immer absehen, ob die Technologien, auf welche man während der Entwicklung setzt immer zur Verfügung stehen und gewartet werden. Des Weiteren kann es zu Änderungen in der Gesetzgebung kommen. Als Beispiel hierfür gilt die DSGVO. Auch ein Wandel in der Gesellschaft kann dazu führen, dass sich Anforderungen ändern. Hier ist die Popularität von abhängen Softwareprodukten als Beispiel zu nennen. Sollten sich die Unternehmensziel des Kunden ändern, kann es auch hier zu einer Änderung der Anforderungen kommen. Ein Beispiel hierfür ist, dass man sich geeinigt hat eine Windows-Anwendung zu bauen und der Kunde stellt den Betrieb auf MAC-OS um.
+Um solche Änderungen schneller zu erkennen, kann man das Projekt mit einem agilen Softwareprozess abwickeln. So kann man schneller auf Änderungswünsche von Kunden reagieren. Des Weiteren kann ein Prototyp entwickelt werden, damit man die technischen Hürden abklären und testen kann.
 \section{Schlagen Sie das am besten geeignete allgemeine Vorgehensmodell vor, das als Grundlage für die Ent-
 wicklung der folgenden Systeme dienen kann. Begründen Sie ihre Entscheidung auf der Basis des Sys-
 temtyps, der entwickelt wird:}
 \subsection{Ein System, das bei einem Auto das Antiblockiersystem steuert}
-Da es sich hier um ein kritisches System handelt, von welchem Menschenleben abhängen können würde ich hier zu einer Plan-getriebenen Vorgehensweise tendieren. Der Kunde muss hier auch nicht wirklich mit einbezogen werden dies kann sehr gut ohne den Kunden getestet werden und hängt nicht vom Geschmack usw. ab
+Da es sich hier um ein kritisches System handelt, von welchem Menschenleben abhängen können würde wir hier zu einer Plan-getriebenen Vorgehensweise tendieren.
+Es gibt auch wenig Sinn nur einen Teil der Software auszuliefern, da diese nur komplett Funktionsfähig ist. Der Kunde muss hier auch nicht wirklich mit einbezogen werden dies kann sehr gut ohne den Kunden getestet werden und hängt nicht vom Geschmack usw. ab.
 \subsection{Ein Virtual-Reality-System zur Unterstützung der Maschinenwartung}
-Hier würde ich es davon anhängig machen, welche Maschienen gewartet werden müssen. Sollte es ein MRT-Gerät sein, dann würde ich zu einer Plan-getriebenen Vorgehensweise tendieren. Der Ausfall eines solchen Geräts kann fatal sein, wenn es dringend gebraucht wird. Werden hingegen Maschinen gewartet wie eine Waschmaschine, welche ein Hobby-Heimwerker damit warten kann, dann würde ich ein Agiles-Modell setzen. Hier können dann auch die User Input zur UI/UX geben.
+Hier würde wir es davon anhängig machen, welche Maschinen gewartet werden müssen. Sollte es ein MRT-Gerät sein, dann würde wir zu einer Plan-getriebenen Vorgehensweise tendieren.
+Der Ausfall eines solchen Geräts kann fatal sein, wenn es dringend gebraucht wird. Werden hingegen Maschinen gewartet wie eine Waschmaschine, welche ein Hobby-Heimwerker damit warten kann, dann würde wir auf ein Agiles-Modell setzen. Hier können dann auch die User Input zur UI/UX geben.
 \subsection{Ein Buchhaltungssystem, das in einer Universität das bestehende System ersetzt}
-Da ein Buchhaltungssystem klar definiert werden kann und bei einer ablöse eines bestehenden Systems die Rückmeldungen der Kunden nicht sehr informativ sein könne (da sie den Entwicklungsvortschritt immer mit dem bisherigen Programm vergleichen) würde ich einen Prozess-getriebenen Vorgang wählen.
+Da ein Buchhaltungssystem klar definiert werden kann und bei einer ablöse eines bestehenden Systems die Rückmeldungen der Kunden nicht sehr informativ sein könnte (da sie den Entwicklungsvortschritt immer mit dem bisherigen Programm vergleichen) würde wir einen Plan-getriebenen Vorgang wählen.
 \subsection{Ein interaktives Reiseplanungssystem, das den Nutzern hilft, Reisen mit den geringsten Auswir-
 kungen auf die Umwelt zu planen}
-Dieses System würde ich in einer Agilen Form entwickeln, da der Endbenutzer hier eine große Bereicherung im Entwicklungsprozess sein kann. Das Programm würde eine gute UI/UX benötigen, deswegen ist die Rückmeldung von Benutzern nochmal wichtig. Des weiteren handelt es sich hier um kein zu komplexes Problem und auch nicht um eine kritische Anwendung
+Dieses System würde wir in einer Agilen Form entwickeln, da sich die Anforderungen ständig ändern. Das Programm würde eine gute UI/UX benötigen, deswegen ist die Rückmeldung von Benutzern auch wichtig. Des weiteren handelt es sich hier um kein zu komplexes Problem und auch nicht um eine kritische Anwendung.
 \section{Wann würden Sie sich gegen eine agile Methode zur Entwicklung eines Softwaresystems aussprechen?}
-Wenn es sich um ein kritisches System handelt, in welchem das menschliche Leben gefährdet sein kann. Hier finde ich es wichtig, dass solche Systeme Plan-getrieben umgesetzt werden. Meist ist dies auch von den Betrieben vorgegeben und man muss sich Zertifikate dafür geben lassen. Des weiteren würde ich mich bei großen oder komplexen Programmen für eine Plan-getriebene Variante aussprechen, da hier eine gute Planung und eine gute Architektur von großem Vorteil ist, bzw. ein muss ist. Wenn man solche Projekte in einer agilen Form umsetzt läuft man Gefahr, dass man durch eine voreilige Implementierung sich selbst Hürden für den weiteren Projekt-lauf liefert.
+Wenn es sich um ein kritisches System handelt, in welchem das menschliches Leben gefährdet sein kann. Hier ist es wichtig, dass solche Systeme Plan-getrieben umgesetzt werden.
+Des Weiteren würden wir uns bei neuen Projekten, welche sich als großen oder komplexen herausstellen für eine Plan-getriebene Variante aussprechen. In diesem Fall ist eine gute Planung und eine gute Architektur von großem Vorteil ist, bzw. ein muss ist. Wenn man solche Projekte in einer agilen Form umsetzt läuft man Gefahr, dass man durch eine voreilige Implementierung sich selbst Hürden für den weiteren Projekt-lauf liefert. Auch wenn sich die Entwicklerteams an vielen unterschiedlichen Standorten und/oder Zeitzonen befinden ist ein Plan-getriebener Prozess von Vorteil.
 \pagebreak
 \section{Extreme Programming drückt die Benutzer:innenanforderungen in Form von User-Storys bzw. Szenarios
 aus, die jeweils auf eine Karteikarte geschrieben werden. Erörtern Sie die Vor- und Nachteile dieses An-
 satzes zur Anforderungsbeschreibung.}
-Wenn man Anforderungen auf Karteikarten schreibt, dann müssen diese sehr zusammengefasst werden. Man hat also die Chance, dass der Kunde sich mit dem Problem selbst mehr auseinander setzte und sich zuvor überlegt, welche Anforderungen er/sie unterbringen bzw einbringen möchte und die Formulierung so wählt, dass diese leicht verständlich ist. Wenn der Kunde nur wenig Platz zur Beschreibung eines Problems hat, dann kann dies aber auch wieder ungenaue werden, vor allem, wenn man ein sehr komplexes Problem Beschreiben will. Generell ist es schwierig wenn alle Kunden Anforderungen stellen dürfen, da man hier leicht den Überblick verlieren kann was essentielle Features sind und was nur nice to have ist
+Ein Vorteil von den User-Storys ist es mit Sicherheit, dass die Anforderungen nicht in einem großen Dokument zusammengefasst sind, sondern in kleine Teilanforderungen aufgeteilt sind. Durch die vielen Inputs kann es auch passieren, dass wichtige Anforderungen leicht übersehen werden können. Diese herauszufiltern ist schwierig.
+Da das Format einer Karteikarte nicht viel platz bietet, muss dich der Kunde sehr genau überlegen, was er als User-Story aufschreibt. Man hat also die Chance, dass der Kunde sich mit dem Problem selber mehr auseinander setzte und sich zuvor überlegt, welche Anforderungen er/sie einbringen möchte. Man muss auch prüfen, ob der Kunde/ die Kundin, welcher die User-Story erstellt hat repräsentativ ist. Des Weiteren kann es auch sein, dass Kunden aufgrund ihrer Erfahrung teile eines Vorganges als selbstverständlich erachten und deshalb den gewünschten Vorgang nicht vollständig Erklären. Dadurch, dass der Kunde / die Kundin selbst die User-Storys erstellen kann, wird durch diesen Ansatz der Bedarf bestmöglich abgedeckt.
 \section{Vergleichen Sie den Scrum-Anzatz zum Projektmanagement mit konventionellen planbasierten Vorge-
 hensweisen. Die Gegenüberstellung sollte die Effektivität jedes Ansatzes bei den folgenden Punkten be-
 rücksichtigen: Aufteilung der Mitarbeiter:innen auf die Projekte, Schätzung der Projektkosten, Erhalt der
